--- a/.env.example
+++ b/.env.example
@@ -25,8 +25,8 @@ PUBLIC_FILESYSTEM_DISK=local_public
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=null
-DB_USERNAME=null
+DB_DATABASE=snip-it
+DB_USERNAME=root
 DB_PASSWORD=null
 DB_PREFIX=null
 DB_DUMP_PATH='/usr/bin'
